--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:latest
-COPY * ./
+WORKDIR /flask
+COPY . .
 CMD pip install -r requirements.txt && \
     export FLASK_APP=main && flask run --host 0.0.0.0
-
