--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,4 @@
 FROM python:3.10-slim
-RUN mkdir backend/
-COPY *.py requirements.txt backend/
-RUN pip install -r backend/requirements.txt
-CMD python main.py
+WORKDIR /backend/
+COPY *.py requirements.txt ./
+RUN pip install -r requirements.txt
