--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.10-slim
 WORKDIR /backend/
-COPY *.py requirements.txt ./
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
+COPY *.py ./
